--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 </div>
                 <span>Homepage01</span>
             </li>
-            <!-- <li>
+            <li>
                 <div class="n_box">
                     <i class="fa-solid fa-desktop"></i>
                 </div>
                 <span>Homepage02</span>
-            </li> -->
+            </li>
             <li>
                 <div class="n_box">
                     <i class="fa-solid fa-desktop"></i>
@@ -300,7 +300,7 @@
                     </li>
                 </ul>
             </section>
-            <!-- <section class="page4">
+            <section class="page4">
                 <div class="p_titl">
                     <h2 class="titl_txt col_yellw">Homepage</h2>
                     <img class="ico" src="img/icon3.svg" />
@@ -318,7 +318,7 @@
                         </div>
                         <ul class="more_butt">
                             <li>
-                                <a href="#">
+                                <a href="img/hyundai_ppt.pdf">
                                     <div class="b_txt" data-splitting>
                                         기획서보기
                                     </div>
@@ -344,7 +344,7 @@
                     <li class="comein">
                         <video
                             class="homevideo"
-                            src="img/hanwha.mp4"
+                            src="img/hyundai_homepage.mp4"
                             autoplay
                             loop
                             muted
@@ -352,7 +352,7 @@
                         <div class="p4_box"></div>
                     </li>
                 </ul>
-            </section> -->
+            </section>
             <section class="page5">
                 <div class="p_titl">
                     <h2 class="titl_txt col_blu">Javascript</h2>
